# tray-wrapper

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build_test.yml  code_coverage.yml  release_publish.yml
examples/: axum.rs
src/: event_loop.rs  lib.rs  menu_state.rs  server_generator.rs  server_status.rs  tray_wrapper.rs  user_event.rs
ui_tests/: basic.rs  main.rs  restart.rs
