[package]
name = "tray-wrapper"
version = "0.0.1"
authors = ["Christopher Hotchkiss <chris@hotchkiss.io>"]
edition = "2024"
description = "A simple wrapper library to make it easy to run servers with a GUI tray icon"
repository = "https://github.com/chotchki/tray-wrapper"
license = "MIT OR Apache-2.0"
categories = ["gui"]

[dependencies]
