[package]
name = "tray-wrapper"
version = "0.0.6"
authors = ["Christopher Hotchkiss <chris@hotchkiss.io>"]
edition = "2024"
description = "A simple wrapper library to make it easy to run servers with a GUI tray icon"
repository = "https://github.com/chotchki/tray-wrapper"
license = "MIT OR Apache-2.0"
categories = ["gui"]

[dependencies]
tray-icon = "0.21.0"
winit = "0.30"

[target."cfg(target_os = \"macos\")".dependencies]
objc2-core-foundation = "0.3.1"
