[package]
name = "tray-wrapper"
version = "0.3.2"
authors = ["Christopher Hotchkiss <chris@hotchkiss.io>"]
edition = "2024"
description = "A simple wrapper library to make it easy to run servers with a GUI tray icon"
repository = "https://github.com/chotchki/tray-wrapper"
license = "MIT OR Apache-2.0"
categories = ["gui"]

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["rt", "sync"] }
axum = { version = "0.8.1" }

[dependencies]
image = "0.25.5"
take-once = "0.1.3"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tokio-util = "0.7"
tray-icon = "0.21.0"
winit = "0.30"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"
glib = "0.21.1"

[target."cfg(target_os = \"macos\")".dependencies]
objc2-core-foundation = "0.3.1"

[[test]]
name = "ui_basic"
path = "ui_tests/basic.rs"
harness = false

[[test]]
name = "ui_restart"
path = "ui_tests/restart.rs"
harness = false
